[tool.poetry]
name = "contsub"
version = "0.1.0"
description = "Radio astronomy data continuum subtraction tools"
authors = ["Amir Kazemi-Moridan, Sphesihle Makhathini, Mika Naidoo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.22.4"
astropy = "^6.0.0"
scipy = "^1.12.0"
dask-ms = {version="^0.2.20", extras=["xarray"]}
tdqm = "*"
stimela = {git = "https://github.com/caracal-pipeline/stimela.git", branch="master"}

[tool.poetry.scripts]
imcontsub = "contsub.parser.imcontsub:runit"
uvcontsub = "contsub.parser.uvcontsub:runit"

[tool.poetry.group.tests]
optional = true
[tool.poetry.group.tests.dependencies]
pytest = "^7.1.3"
flake8 = "*"

[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
ipython = "^8.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
